--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"l": "vite dev",
+		"l": "vite dev --host 0.0.0.0",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -30,5 +30,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.33.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bigger-picture": "^1.1.11"
+	}
 }
